--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,14 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 100vh; 
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  justify-content: flex-start;
+    padding-top: 3rem;
 }
 
 .footer {
@@ -42,18 +43,13 @@
 .title {
   margin: 0;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 1.5rem;
 }
 
 .title,
 .description {
   text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+  max-width: 60vw;
 }
 
 .code {
@@ -112,5 +108,67 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+}
+
+.mainnav ul{
+  display: flex;
+  justify-content: center;
+    margin-top: 50px;
+}
+
+.mainnav ul li{
+  margin: 0 24px;
+    list-style: none;
+    font-weight: bold;
+    cursor: pointer;
+} 
+
+.myimg{
+  width: 40px;
+  height: 5000x;
+  border-radius: 100px; 
+ 
+}
+
+.imagewrap{
+  padding: 15px 0px;
+}
+
+.h2{
+  font-size: 2.5rem;
+}
+
+.h3{
+  font-size: 1.75rem;
+  font-size: 1.5rem;
+  margin-top: 0;
+  margin-bottom: 11px;
+}
+
+.btn{
+  color: white;
+    background: black;
+    padding: 7px 6px;
+    cursor: pointer;
+    border-radius: 6px;
+    font-size: 12px;
+    margin-bottom: 9px; 
+}
+
+.p{
+  margin: 16px 0;
+    margin-top: 3px;
+}
+
+
+@media only screen and (max-width: 600px) {
+  
+    .mainnav ul li{
+      margin: 0 6px;
+        list-style: none;
+        font-weight: bold;
+        cursor: pointer;
+     
   }
 }
